--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "react": "^16.8.5",
+    "react-color": "^2.17.0",
     "react-dom": "^16.8.5",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "styled-components": "^4.2.0",
+    "tinycolor2": "^1.4.1",
+    "wcag-contrast": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
