--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "a11y-contrast",
+  "name": "contrast",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "node-sass": "^4.11.0",
-    "normalize.css": "^8.0.1",
-    "react": "^16.8.5",
-    "react-color": "^2.17.0",
-    "react-dom": "^16.8.5",
-    "react-scripts": "2.1.8",
+    "node-sass": "^4.12.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.9.0",
+    "react-color": "^2.17.3",
+    "react-dom": "^16.9.0",
+    "react-scripts": "3.1.1",
     "tinycolor2": "^1.4.1",
     "wcag-contrast": "^2.1.1"
   },
@@ -21,10 +21,16 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
