--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.9.0",
     "react-color": "^2.17.3",
     "react-dom": "^16.9.0",
+    "react-ga": "^2.6.0",
     "react-scripts": "3.1.1",
     "tinycolor2": "^1.4.1",
     "wcag-contrast": "^2.1.1"
