--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
 [build]
     command = "npm run build"
     publish = "build"
+
+[build.environment]
+    PUBLIC_URL = "https://contrast.crgeary.com"
