--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.9.0",
     "react-ga": "^2.6.0",
     "react-scripts": "3.1.1",
+    "react-tooltip-lite": "^1.10.0",
     "tinycolor2": "^1.4.1",
     "wcag-contrast": "^2.1.1"
   },
