--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react": "^16.9.0",
     "react-color": "^2.17.3",
     "react-dom": "^16.9.0",
-    "react-ga": "^2.6.0",
+    "react-ga": "^3.3.0",
     "react-scripts": "3.1.1",
     "react-tooltip-lite": "^1.10.0",
     "tinycolor2": "^1.4.1",
@@ -18,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "check-ts": "tsc --noEmit --project tsconfig.json"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,5 +35,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.24",
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.1",
+    "typescript": "^4.6.3"
   }
 }
