--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-scripts": "3.1.1",
     "react-tooltip-lite": "^1.10.0",
     "tinycolor2": "^1.4.1",
-    "wcag-contrast": "^2.1.1"
+    "wcag-contrast": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,6 +40,8 @@
     "@types/node": "^17.0.24",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
+    "@types/tinycolor2": "^1.4.3",
+    "@types/wcag-contrast": "^3.0.0",
     "typescript": "^4.6.3"
   }
 }
