--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,10 @@
     "skipLibCheck": true,
     "allowJs": true,
     "jsx": "react",
-    "noEmit": true
+    "noEmit": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
