--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.3.1",
     "node-sass": "^7.0.1",
-    "react": "^16.9.0",
+    "react": "^17.0.2",
     "react-color": "^2.19.3",
-    "react-dom": "^16.9.0",
+    "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-scripts": "5.0.1",
-    "react-tooltip-lite": "^1.12.0",
     "tinycolor2": "^1.4.2",
     "wcag-contrast": "^3.0.0"
   },
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@types/node": "^17.0.24",
     "@types/react": "^18.0.5",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.0.1",
     "@types/tinycolor2": "^1.4.3",
     "@types/wcag-contrast": "^3.0.0",
