--- a/package.json
+++ b/package.json
@@ -1,47 +1,49 @@
 {
-  "name": "contrast",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "classnames": "^2.3.1",
-    "node-sass": "^7.0.1",
-    "react": "^17.0.2",
-    "react-color": "^2.19.3",
-    "react-dom": "^17.0.2",
-    "react-ga": "^3.3.0",
-    "react-scripts": "5.0.1",
-    "tinycolor2": "^1.4.2",
-    "wcag-contrast": "^3.0.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "check-ts": "tsc --noEmit --project tsconfig.json"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/node": "^17.0.24",
-    "@types/react": "^18.0.5",
-    "@types/react-color": "^3.0.6",
-    "@types/react-dom": "^18.0.1",
-    "@types/tinycolor2": "^1.4.3",
-    "@types/wcag-contrast": "^3.0.0",
-    "typescript": "^4.6.3"
-  }
+    "name": "contrast",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "classnames": "^2.3.1",
+        "node-sass": "^7.0.1",
+        "react": "^17.0.2",
+        "react-color": "^2.19.3",
+        "react-dom": "^17.0.2",
+        "react-ga": "^3.3.0",
+        "react-scripts": "5.0.1",
+        "tinycolor2": "^1.4.2",
+        "wcag-contrast": "^3.0.0"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "check-ts": "tsc --noEmit --project tsconfig.json",
+        "format": "prettier --write ."
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@types/node": "^17.0.24",
+        "@types/react": "^18.0.5",
+        "@types/react-color": "^3.0.6",
+        "@types/react-dom": "^18.0.1",
+        "@types/tinycolor2": "^1.4.3",
+        "@types/wcag-contrast": "^3.0.0",
+        "prettier": "^2.6.2",
+        "typescript": "^4.6.3"
+    }
 }
