--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
     "private": true,
     "dependencies": {
         "classnames": "^2.3.1",
-        "node-sass": "^7.0.1",
         "react": "^17.0.2",
         "react-color": "^2.19.3",
         "react-dom": "^17.0.2",
         "react-scripts": "5.0.1",
+        "sass": "^1.50.0",
         "tinycolor2": "^1.4.2",
         "wcag-contrast": "^3.0.0"
     },
