--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "classnames": "^2.3.1",
+        "husky": "^7.0.4",
         "react": "^17.0.2",
         "react-color": "^2.19.3",
         "react-dom": "^17.0.2",
@@ -18,7 +19,8 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "check-ts": "tsc --noEmit --project tsconfig.json",
-        "format": "prettier --write ."
+        "format": "prettier --write .",
+        "prepare": "husky install"
     },
     "eslintConfig": {
         "extends": "react-app"
