--- a/package.json
+++ b/package.json
@@ -2,49 +2,38 @@
     "name": "contrast",
     "version": "0.1.0",
     "private": true,
+    "scripts": {
+        "check-ts": "tsc --noEmit --project tsconfig.json",
+        "build": "next build",
+        "dev": "next dev",
+        "format": "prettier --write .",
+        "lint": "next lint",
+        "prepare": "husky install",
+        "start": "next start"
+    },
     "dependencies": {
         "classnames": "^2.3.1",
         "husky": "^7.0.4",
-        "react": "^17.0.2",
+        "next": "12.1.5",
+        "react": "18.1.0",
         "react-color": "^2.19.3",
-        "react-dom": "^17.0.2",
-        "react-scripts": "5.0.1",
+        "react-dom": "18.1.0",
         "sass": "^1.50.0",
+        "styled-components": "^5.3.5",
         "tinycolor2": "^1.4.2",
         "wcag-contrast": "^3.0.0"
     },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "check-ts": "tsc --noEmit --project tsconfig.json",
-        "format": "prettier --write .",
-        "prepare": "husky install"
-    },
-    "eslintConfig": {
-        "extends": "react-app"
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
     "devDependencies": {
-        "@types/node": "^17.0.24",
-        "@types/react": "^18.0.5",
+        "@types/node": "17.0.29",
+        "@types/react": "18.0.8",
         "@types/react-color": "^3.0.6",
-        "@types/react-dom": "^18.0.1",
+        "@types/react-dom": "18.0.0",
+        "@types/styled-components": "^5.1.25",
         "@types/tinycolor2": "^1.4.3",
         "@types/wcag-contrast": "^3.0.0",
+        "eslint": "8.14.0",
+        "eslint-config-next": "12.1.5",
         "prettier": "^2.6.2",
-        "typescript": "^4.6.3"
+        "typescript": "4.6.3"
     }
 }
