--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,20 @@
 {
     "compilerOptions": {
-        "baseUrl": ".",
-        "module": "esnext",
         "target": "es5",
         "lib": ["dom", "dom.iterable", "esnext"],
-        "strict": true,
-        "isolatedModules": true,
-        "moduleResolution": "node",
-        "esModuleInterop": true,
+        "allowJs": true,
         "skipLibCheck": true,
-        "jsx": "react",
-        "noEmit": true,
-        "allowSyntheticDefaultImports": true,
+        "strict": true,
         "forceConsistentCasingInFileNames": true,
-        "resolveJsonModule": true
+        "noEmit": true,
+        "esModuleInterop": true,
+        "module": "esnext",
+        "moduleResolution": "node",
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "jsx": "preserve",
+        "incremental": true
     },
-    "include": ["src/**/*"],
+    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
     "exclude": ["node_modules"]
 }
