--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "check-ts": "tsc --noEmit --project tsconfig.json",
-        "build": "next build",
+        "build": "next build && next export",
         "dev": "next dev",
         "format": "prettier --write .",
         "lint": "next lint",
