--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
         "start": "next start"
     },
     "dependencies": {
-        "classnames": "^2.3.1",
         "husky": "^7.0.4",
+        "modern-normalize": "^1.1.0",
         "next": "12.1.5",
         "react": "18.1.0",
         "react-color": "^2.19.3",
