--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "format": "prettier --write .",
         "lint": "next lint",
         "prepare": "husky install",
-        "start": "next start"
+        "start": "next start",
+        "test:e2e": "cypress open"
     },
     "dependencies": {
         "husky": "^7.0.4",
@@ -31,6 +32,7 @@
         "@types/styled-components": "^5.1.25",
         "@types/tinycolor2": "^1.4.3",
         "@types/wcag-contrast": "^3.0.0",
+        "cypress": "^9.6.0",
         "eslint": "8.14.0",
         "eslint-config-next": "12.1.5",
         "prettier": "^2.6.2",
