--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,15 @@
 {
-    "singleQuote": true,
     "printWidth": 100,
-    "semi": true,
     "arrowParens": "always",
-    "tabWidth": 4
+    "trailingComma": "all",
+    "semi": true,
+    "tabWidth": 4,
+    "overrides": [
+        {
+            "files": ["*.yaml", "*.yml"],
+            "options": {
+                "tabWidth": 2
+            }
+        }
+    ]
 }
